<resources>
    <string name="app_name">TP3</string>
    <string name="text_UserName">Prénom</string>
    <string name="text_UserLastName">Nom</string>
    <string name="text_Password">Mot de passe</string>
    <string name="text_Age">Age</string>
    <string name="text_Phonenumber">Numéro de téléphone</string>
    <string name="text_UserId">placeholder</string>
    <string name="button_Submit">Envoyer</string>
    <string name="toast_success">Données bien envoyées</string>
    <string name="toast_error">Erreur lors de l\'envoie de données</string>
    <string name="placeholder">placeholder</string>
    <string name="toast_error2">Erreur lors de la lecture de données</string>
    <string name="planning1">8h-10h :</string>
    <string name="planning2">10h-12h :</string>
    <string name="planning3">14h-16h :</string>
    <string name="planning4">16h -18h :</string>
    <string name="planning">Afficher Planning</string>
    <string name="button_NewDay">Nouveau Jour</string>
</resources>